services/deploy/multiserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: multiserver-service
  labels:
    app: multiserver
spec:
  selector:
    app: multiserver
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiserver
  labels:
    app: multiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiserver
  template:
    metadata:
      labels:
        app: multiserver
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "multiserver"
        dapr.io/app-port: "5002"
        dapr.io/enable-api-logging: "true"
        # Multiserver is currently a beefy service, so we need to give it some time to start up
        # Actually there is some issue with postgres and connections are timing out
        # TODO: investigate why this is happening
        dapr.io/sidecar-liveness-probe-delay-seconds: "15"
        dapr.io/sidecar-liveness-probe-threshold: "10"
    spec:
      containers:
        - name: multiserver
          image: $K3D_REGISTRY_URL/multiserver:latest
          # command: ["/bin/bash", "-c", "--"]
          # args: ["while true; do sleep 30; done;"]
          ports:
            - containerPort: 5002
          imagePullPolicy: Always

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multiserver-service
                port:
                  number: 5002
